<resources>
    <string name="app_name">Study Spot Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="underlinedText"><u>save!</u></string>
    <string name="filters">Filters</string>
    <string name="lighting">\t Lighting</string>
    <string name="busy">\t Busy</string>
    <string name="quiet">\t Quiet</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="outlets">\t Outlets</string>
    <string name="search">Search Study Spots</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name = "user_rating_label"/>
</resources>